# demo

./: Untitled0.ipynb
aethiraum-core/ai/: lang_agent.rs  node_oracle_agent.rs
aethiraum-core/consensus/: consensus_coordinator.rs  proof_of_knowhash.rs  slot_leader_rotation.rs
aethiraum-core/crypto/: lattice_signature.rs  post_quantum_ed25519.rs  quantum_cryptex_engine.rs  zk_proof_system.rs
aethiraum-core/governance/: onchain_dao_voting.rs  voting_bot_detection.rs
aethiraum-core/identity/: ai_attestations.rs  zero_id.rs
aethiraum-core/ledger/: audit_log.rs  ledger_tree.rs
aethiraum-core/p2p/: gossip_ai.rs  multi_chain_bridge.rs  state_sync.rs
aethiraum-core/rpc/: graphql_rpc.rs  websocket_node_bridge.rs
aethiraum-core/storage/: holo_store.rs
aethiraum-core/tx/: tx_classifier_ai.rs  tx_pool.rs  tx_validation.rs
aethiraum-core/vm/: aethirvm_core.rs  ai_gas_optimizer.rs  ml_inference_module.rs
veda_chain_os/: AGENTS.md  Cargo.toml  README.md
veda_chain_os/blockchain_core/: Cargo.toml  README.md
veda_chain_os/blockchain_core/src/: lib.rs
veda_chain_os/blockchain_core/src/cryptography/: README.md  mod.rs
veda_chain_os/blockchain_core/src/cryptography/lattice_based/: algorithms.rs  keys.rs  mod.rs
