[package]
name = "veda_blockchain_core"
version = "0.1.0"
edition = "2021"
authors = ["VEDA Development Team <dev@veda.org>"] # Placeholder author
description = "Core blockchain components for VEDA Chain OS, including cryptography, consensus, and smart contract infrastructure."
license = "Apache-2.0" # Or MIT, depending on final choice
repository = "https://github.com/your-org/veda-chain-os/tree/main/veda_chain_os/blockchain_core" # Placeholder URL
readme = "README.md"

[dependencies]
# Placeholder for post-quantum cryptography libraries.
# Specific crates like pqcrypto-kyber, pqcrypto-dilithium will be added here.
# For example:
# pqcrypto-kyber = { version = "0.8", features = ["std"] }
# pqcrypto-dilithium = { version = "0.7", features = ["std"] }

# Other potential dependencies for the blockchain core:
# rand = "0.8"
# serde = { version = "1.0", features = ["derive"] }
# sha3 = "0.10" # For hashing
# etc.

[lib]
name = "blockchain_core"
path = "src/lib.rs"
